# extreme_3d_faces

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  Readme.txt  main.cpp
3DMM_model/: mod_struct_expr.mat  trimBaselFace.py
config/: CMakeLists.txt
data/paper/imgs/: 03f245cb652c103e1928b1b27028fadd--smith-glasses-too-faced.pts  20140420_011855_News1-Apr-25.pts  2016-Vintage-Pria-Kacamata-Hitam-Merek-Mewah-Kecil-Putaran-Sun-Kacamata-Designer-Retro-pria-Kacamata-Kacamata.pts  214451-human-being-woman-old-calm-face-senior-citizen-photocase-stock-photo-large.pts  268335b4bd3ebbb004fdf1860fc16950--stylish-sunglasses-oakley-sunglasses.pts  286264.pts  3808673138_5e653ffd1d_b.pts  436764_detail.pts  5485140946_470e9cb16b_z.pts  700-man-crisis-thoughtful-tired-face-think.pts  800px_COLOURBOX2293166.pts  81e6215ffbe28190b95a1e2fdea72066--photos-of-women-india-people.pts  8845981467_6945cef32a_b.pts  9r0a9959_wide-39289aa541aa720da7eed630a8df9145a2a127e3-s900-c85.pts  BradPittClassicyG2CIQ_M1Yul.pts  Classical-Men-Hair-Cut.pts  Don-Draper-Sunglasses-by-Randolph-Engineering.pts  Jon-Hamm.pts  Man-Grandpa-Opi-Old-Man-Grandfather-Senior-Vital-2555188.pts  Old_Mother.pts  Old_Woman_aboard_Ferry_-_Kanyakumari_-_India.pts  Premiere+Fox+Searchlight+Pictures+Tree+Life+yG2CIQ_M1Yux.pts  SSR-Arab-woman.pts  Scarface_3-1.pts  (+27 more)
demoCode/: bumpMapRegressor.py  testBatchModel.py  testBatchModel.py~  testImages.txt  testImages.txt~  testPaperResults.sh  utils.py
modules/CvGl/: CMakeLists.txt  FBRender.cpp  FBRender.h  SimpleMesh.h  Texture.h  cvgl.h
modules/PoseExpr/: CMakeLists.txt
(+69 files in other folders)
